prevent dimension from getting cut off

--- a/style/dimensions.css
+++ b/style/dimensions.css
@@ -60,7 +60,7 @@
   width: 100%;
   text-align: center;
   margin: 0;
-  font-size: 200%;
+  font-size: 150%;
 }
 
 .slider-mark {
